--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <title>Login Karate</title>
-  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
   <div class="container">
     <div class="imagen">
-      <img src="IMG/yolo.png" height="150">
+      <img src="yolo.png" height="150">
     </div>
     
     <h2>Iniciar sesión</h2>
