--- a/admin_ta.html
+++ b/admin_ta.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="CSS/karate.css">
+    <link rel="stylesheet" href="karate.css">
 
 </head>
 <body>
     <div class="logo-container">
-        <img src="IMG/yolo.png" alt="Logo de la empresa" class="logo">
+        <img src="yolo.png" alt="Logo de la empresa" class="logo">
       </div>
       <div class="window2">
         <h2 style="text-align: center;">USER - ADMIN</h2>
