--- a/llave3.html
+++ b/llave3.html
@@ -4,7 +4,7 @@
   <title>Llave de 8 competidores</title>
 </head>
 <body>
-    <link rel="stylesheet" href="CSS/stylellave.css">
+    <link rel="stylesheet" href="stylellave.css">
     <div class="container">
           <h2>Torneo Nombre / Categoria x años / Avanzado</h2>
           <h2 class="gancon">Ganador: Diego Cordova</h2>
