--- a/torneo.html
+++ b/torneo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Login Karate</title>
-  <link rel="stylesheet" href="CSS/torneo.css">
+  <link rel="stylesheet" href="torneo.css">
 
 </head>
 
