--- a/torneo.html
+++ b/torneo.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <div class="imagen">
-      <img src="IMG/yolo.png" height="150">
+      <img src="yolo.png" height="150">
     </div>
     
     <h2>Nuevo Torneo</h2>
